fix unggah button spacing in upload page

--- a/client/style/index.css
+++ b/client/style/index.css
@@ -117,9 +117,7 @@ body {
 .input__container {
   min-height: 65vh;
   min-width: 50vw;
-  margin: 2em;
   border-radius: 10px;
-  padding: 1.5em;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -204,6 +202,12 @@ body {
 
 .action__container h1,
 .action__container input {
+  margin: 1em;
+  font-weight: 400;
+}
+
+.action__container button {
+  width: 10em;
   margin: 1em;
   font-weight: 400;
 }
